--- a/assignment/views/main.ejs
+++ b/assignment/views/main.ejs
@@ -4,12 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home Page</title>
+    <link rel="stylesheet" href="/main.css" />
   </head>
   <body>
     <h1>This is the home page</h1>
     <form action="/entered-user-name" method="post">
-      <input name="user-name" type="text" />
-      <button type="submit" name="user-name">submit</button>
+      <input name="user" type="text" />
+      <button type="submit" name="user">submit</button>
     </form>
   </body>
 </html>
