--- a/Express/after/views/shop/cart.ejs
+++ b/Express/after/views/shop/cart.ejs
@@ -5,17 +5,22 @@
         <%- include('../includes/navigation.ejs') %>
         <main>
             <% if(products.length > 0) { %>
-                <ul>
+                <ul class="cart__item-list">
                     <% products.forEach(p => { %>
-                        <li>
+                        <li class="cart__item">
                             <p> <%= p.title %> (<%= p.cartItem.quantity %>) </p>
                             <form action="/cart-delete-item" method="post">
                                 <input type="hidden" value="<%= p.id %>" name="productId"/>
-                                <button class="btn" type="submit">Delete</button>
+                                <button class="btn danger" type="submit">Delete</button>
                             </form>
                         </li>
                     <% }) %>
                 </ul>
+                <div class="centered">
+                    <form action="/create-order" method="post">
+                        <button type="submit" class="btn">Order Now!</button>
+                    </form>
+                </div>
             <% } else { %>
                 <h1>No Products in Cart! </h1> 
             <% } %>
