--- a/Express/after/views/shop/cart.ejs
+++ b/Express/after/views/shop/cart.ejs
@@ -8,7 +8,8 @@
                 <ul class="cart__item-list">
                     <% products.forEach(p => { %>
                         <li class="cart__item">
-                            <p> <%= p.productId.title %> (<%= p.quantity %>) </p>
+                            <h1><%= p.productId.title %></h1>
+                            <h2>Quantity: <%= p.quantity %></h2>
                             <form action="/cart-delete-item" method="post">
                                 <input type="hidden" value="<%= p.productId._id %>" name="productId"/>
                                 <button class="btn danger" type="submit">Delete</button>
@@ -16,6 +17,7 @@
                         </li>
                     <% }) %>
                 </ul>
+                <hr>
                 <div class="centered">
                     <form action="/create-order" method="post">
                         <button type="submit" class="btn">Order Now!</button>
