--- a/Express/after/views/admin/edit-product.ejs
+++ b/Express/after/views/admin/edit-product.ejs
@@ -14,18 +14,22 @@
                     <% } %>
                         <form class="product-form"
                             action="/admin/<% if (editing) { %>edit-product<% } else { %>add-product<% } %>"
-                            method="POST">
+                            method="POST" enctype="multipart/form-data">
                             <div class="form-control">
                                 <label for="title">Title</label>
                                 <input class="<%= validationErrors.find(e => e.path === 'title') ? 'invalid' : '' %>"
                                     type="text" name="title" id="title"
                                     value="<% if (editing || hasError) { %><%= product.title %><% }%>">
                             </div>
-                            <div class="form-control">
+                            <!-- <div class="form-control">
                                 <label for="imageUrl">Image URL</label>
                                 <input class="<%= validationErrors.find(e => e.path === 'imageUrl') ? 'invalid' : '' %>"
                                     type="text" name="imageUrl" id="imageUrl"
                                     value="<% if (editing || hasError) { %><%= product.imageUrl %><% }%>">
+                            </div> -->
+                            <div class="form-control">
+                                <label for="imageUrl">Image</label>
+                                <input type="file" name="image" id="image">
                             </div>
                             <div class="form-control">
                                 <label for="price">Price</label>
@@ -35,7 +39,8 @@
                             </div>
                             <div class="form-control">
                                 <label for="description">Description</label>
-                                <textarea class="<%= validationErrors.find(e => e.path === 'description') ? 'invalid' : '' %>"
+                                <textarea
+                                    class="<%= validationErrors.find(e => e.path === 'description') ? 'invalid' : '' %>"
                                     name="description" id="description"
                                     rows="5"><% if (editing || hasError) { %><%= product.description %><% }%></textarea>
                             </div>
