--- a/Express/after/views/shop/index.ejs
+++ b/Express/after/views/shop/index.ejs
@@ -27,8 +27,10 @@
                     </article>
                 <% } %>
             </div>
+            <%- include("../includes/pagination.ejs") %>
         <% } else { %>
             <h1>No Products Found!</h1>
         <% } %>
+
     </main>
 <%- include('../includes/end.ejs') %>
