--- a/Express/after/views/shop/cart.ejs
+++ b/Express/after/views/shop/cart.ejs
@@ -20,9 +20,10 @@
                 </ul>
                 <hr>
                 <div class="centered">
-                    <form action="/create-order" method="post">
+                    <!-- <form action="/create-order" method="post">
                         <button type="submit" class="btn">Order Now!</button>
-                    </form>
+                    </form> -->
+                    <a class="btn" href="/checkout">Order Now!</a>
                 </div>
             <% } else { %>
                 <h1>No Products in Cart! </h1> 
